@@ -1,4 +1,4 @@
 #!/usr/bin/sh
 
 sbtn stageJars
-native-image --class-path "jvm/target/jars/*" viscel.Viscel
+native-image --enable-preview --class-path "jvm/target/jars/*" viscel.Viscel
